tests/ui/errors/snapshots/infer_redundant_cast.snap
---
source: tests/ui/errors/mod.rs
---
  ● Redundant conversion
   ╭─[test.lis:4:3]
 3 │   let x: int = 42;
 4 │   x as int
   ·   ────┬───
   ·       ╰── converting `int` to itself has no effect
 5 │ }
   ╰────
  help: Remove the unnecessary conversion · code: [infer.redundant_conversion]
