tests/ui/errors/snapshots/infer_ref_of_interface_nested_alias_passed_as_interface.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid use of `Ref` with interface
    ╭─[test.lis:26:7]
 25 │   let pp: Ref<P> = ref_of(p)
 26 │   foo(pp)
    ·       ─┬
    ·        ╰── `Ref<P>` does not implement `Foo`
 27 │ }
    ╰────
  help: A reference to an interface does not implement the interface. Dereference with `.*` until reaching the interface value · code: [infer.ref_of_interface]
