tests/ui/errors/snapshots/infer_ref_of_interface_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid use of `Ref` with interface
   ╭─[test.lis:6:20]
 5 │ 
 6 │ fn copy_data(dest: Ref<Writable>) {
   ·                    ──────┬──────
   ·                          ╰── not allowed
 7 │   dest.write("hello")
   ╰────
  help: Use `Writable` instead of `Ref<Writable>`. Interfaces are already reference types in Go · code: [infer.ref_of_interface]
